--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://marouaneDebb.github.io/PFdeployment",
   "name": "rishav-chanda-portfolio",
   "version": "0.1.0",
   "private": true,
